--- a/templates/alumni/lscdsexec_update_form.html
+++ b/templates/alumni/lscdsexec_update_form.html
@@ -12,7 +12,7 @@
  <div class="col-md-8 col-md-offset-2">
  <legend > Hi {{ object.user }}  </legend >
  Please complete the form below for our next Alumni Reception<br>
- <a href="{% url 'guest-list' %}" target="_blank">Whos is coming (open in new page)</a>
+ <a href="{% url 'guest-list' %}" target="_blank">Who is coming (open in new page)</a>
     <br>
    <br>
  {% if form.errors %}
