--- a/templates/event/include/include_network_reception.html
+++ b/templates/event/include/include_network_reception.html
@@ -13,7 +13,7 @@
 
         <tr>   
             <td><strong> <a data-toggle="collapse" data-parent="#accordion"  href="#collapse{{rt.guest.name |slugify}}" >
-                    {{rt.guest.name}}
+                    {{rt.guest.full_name}}
                 </a>
                 <br>{{rt.guest.qualification}}</strong></td>
             <td>{{rt.guest.sector}}</td>
