--- a/templates/home/about.html
+++ b/templates/home/about.html
@@ -1,6 +1,11 @@
 {% extends 'base_sidebar.html' %}
 {% load staticfiles %}
 {% load static %}
+   {% block title %}
+                                  About LSCDS 
+                                  
+
+                {% endblock %}
 {% block main_sidebar %}
 <h3>Life Sciences Career Development Society</h3>
 
