--- a/templates/photologue/gallery_detail.html
+++ b/templates/photologue/gallery_detail.html
@@ -11,7 +11,7 @@
 <div class="container photo-gallery">
     {% for photo in object.public %}
     <div class="col-xs-4 gallery-photo">
-        <a href="{{ photo.get_absolute_url }}"><img src="{{ photo.get_display_url }}" class="{% block gallery-photo-class %}{% endblock %}" alt="{{ photo.title }}"/></a>
+        <a href="{{ photo.get_absolute_url }}"><img src="{{ photo.image.url }}" class="" width="250" alt="{{ photo.title }}"/></a>
     </div>
     {% endfor %}
 </div>
