--- a/lscdsUser/templates/profile-event.html
+++ b/lscdsUser/templates/profile-event.html
@@ -13,7 +13,8 @@
 <legend>Upcoming events</legend>
 {% if not_nr_list %}
 <h4>Network Reception</h4>
- <form class="registration"  action="{% url 'profile-event-registration' %}" method="post">
+ <form class="registration"  action="{% url 'profile-event-registration' %}" method="post">{% csrf_token %}
+ 
                 <table  class='table table-bordered'>
                     <tbody> 
                         {% for event in  not_nr_list %}
@@ -43,6 +44,9 @@
                 </table> 
             </form>
  {% endif %}
+ 
+ 
+ 
             
  {% regroup not_registered_list  by event_type as eventtype_list %}
 
@@ -51,7 +55,8 @@
     <h4>{{ eventtype.grouper }}</h4>
      {% for event in eventtype.list %}
       
-         <form class="registration" id="EventForm{{forloop.parentloop.counter}}" action="{% url 'profile-event-registration' %}" method="post">
+         <form class="registration" id="EventForm{{event.pk}}" action="{% url 'profile-event-registration' %}" method="post">
+         {% csrf_token %}
                 <table  class='table table-bordered'>
                     <tbody> 
                    
@@ -59,7 +64,7 @@
                         <tr>  <td>  <strong>{{event.name}} </strong>
                          {% csrf_token %}
                                 <input type="hidden" name="event_id" value="{{event.pk}}"> </td> 
-                            <td> <a data-toggle="modal" data-id = "EventForm{{forloop.parentloop.counter}}" data-target="#registration" type="submit" class="btn btn-primary pull-right">Register</a></td>
+                            <td> <a data-toggle="modal" data-id = "EventForm{{event.pk}}" data-target="#registration" type="submit" class="btn btn-primary pull-right">Register</a></td>
                       {% elif event.registration_start > now %}
                       <td>  <strong>{{event.name}} </strong> </td>
                         <td class="alert alert-info col-md-6" role="alert">Registration starts in {{event.registration_start|timeuntil}}</td>
@@ -116,7 +121,7 @@
     <h4>{{ eventtype.grouper }}</h4>
   
        
-         <form class="registration"  action="{% url 'profile-event-registration' %}" method="post">
+         <form class="registration"  action="{% url 'profile-event-registration' %}" method="post">{% csrf_token %}
                 <table  class='table table-bordered'>
                     <tbody> 
                       
@@ -208,6 +213,7 @@ $('#btnYes').click(function() {
      var formID = $(this).data('id')
    // $("#EventForm").submit();
      $('#'+formID).submit()
+     console.log($('#'+formID))
 
   
 });
