--- a/photologue/templates/admin/photologue/photo/change_list.html
+++ b/photologue/templates/admin/photologue/photo/change_list.html
@@ -11,7 +11,7 @@
     {% for c in cl.result_list %}
     <div class="photo module">
         <a href="{{ c.pk }}/">
-            <img src="{{ c.get_admin_thumbnail_url }}" alt="{{ c.title }}"/>
+            <img src="{{ c.image.url }}" alt="{{ c.title }}" height = "50"  width = "50"/>
         </a>
 
         <div class="photo-label">
