--- a/templates/contact/contact.html
+++ b/templates/contact/contact.html
@@ -44,7 +44,7 @@ LSCDS | Contact Us
                 <div class="headline"><h2>Contact Form</h2></div>
                 <p>
 All comments, collaboration and sponsorship opportunities are welcomed.
-You can also send us an <a href="mailto:lscds.uoft@gmail.com"> email</a>
+You can also send us an <a href="mailto:lscds.uoft@gmail.com"> email</a> or <a href="https://twitter.com/lscdsuoft"> tweet us</a>
                  </p><br />
                  
     			  {% crispy form %}   			
