--- a/templates/photologue/gallery_list.html
+++ b/templates/photologue/gallery_list.html
@@ -125,7 +125,7 @@ height:50%
 
 
 {% block side_bar %} 
-
+{% cache 86400 sidebar %}{# one day = 60*60*24 seconds #}
 <legend> Gallery Archieve  <legend>
 
 
@@ -133,7 +133,7 @@ height:50%
 
 <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
 
-{% regroup object_list by date_added|date:"Y" as points_by_year %}
+{% regroup gallery_list by date_added|date:"Y" as points_by_year %}
     {% for year_points in points_by_year %}
 
   <div class="panel panel-default">
@@ -158,6 +158,7 @@ height:50%
   </div>
    {% endfor %}
  </div>
+ {% endcache %}
 {% endblock %}
 
 
