--- a/lscdsUser/templates/profile-event-registration.html
+++ b/lscdsUser/templates/profile-event-registration.html
@@ -4,8 +4,8 @@
 
 {% load form_utils %}
 {% load lscds_tags %}
-{% block profile_block %}
-  <legend> Registration  for {{form.event.value}}</legend>
+{% block main %}
+  <legend> Registration  for {{event}}</legend>
 <div class='col-md-6 col-md-offset-2'>
 {% crispy form %}
 </div>
