api working for user profile

--- a/lscdsUser/templates/event.html
+++ b/lscdsUser/templates/event.html
@@ -1,7 +1,11 @@
  <legend> Upcoming events</legend>
  
   {% include "include/upcoming_events.html"  %}
-            
+  <br>
   <legend>Registered events</legend>
   
    {% include "include/my_events.html" %}
+    <br>
+       <legend>Event history</legend>   
+          {% include "include/events_history.html" %}
+   
